# uflsim

./: #compile.sh#  ADDUCTOR-51.v6.ols  ADDUCTOR-51.v6.snd  ADDUCTOR-51.v6.win.ols  ADDUCTOR-51.v6.win.snd  COPYRIGHTS  ChangeLog  ChangeLog.txt  Control.ols  Control.sim  Control.snd  Control2.ols  DONE  HOWTO_BUILD_SIM_FOR_WIN  INSTALL_ON_LINUX_JAH.md  INSTALL_ON_LINUX_JAH.txt  JAH_DEBUGGING  JAH_notes.txt  LungVariableDefinitions.xlsx  Makefile  Makefile.am  Makefile.am_oldJAH  Makefile.in  Makefile.linux  Makefile_edt2spike2_win.qt  Makefile_jah.orig  Makefile_makesine_win.qt  Makefile_simbuild_win.qt  Makefile_simmsg_win.qt  Makefile_simrun_win.qt  Makefile_simviewer_win.qt  Makefile_snd2sim_win.qt  Makefile_wave2daq_win.qt  OConnor2012.snd  QtTest_jah.sh  README  README_FOR_WINDOWS  ReleaseNotes.odt  add_IandE.cpp  affmodel.cpp  (+180 more)
autom4te.cache/: output.0  output.1  output.2  traces.0  traces.2
debian/: README  README.source  changelog  control  copyright  gmon.out  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  simulator.cron.d.ex  simulator.default.ex  simulator.doc-base.EX  usfsim.cron.d.ex  usfsim.default.ex  usfsim.doc-base.EX  watch.ex
